--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,10 @@ browser-use
 playwright
 langchain-openai
 PyPDF2
+beautifulsoup4
+google-auth-oauthlib
+llama-index
+nltk
+numpy
+oauthlib
+python-docx
